# PyQLiteX

./: .env.test  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  settings.json  setup.py
CodeQL-based-Python-source-code-scanner/: __init__.py  setup.py
CodeQL-based-Python-source-code-scanner/basic/: __init__.py  project.py
CodeQL-based-Python-source-code-scanner/codeql/: init.py  loader.py
CodeQL-based-Python-source-code-scanner/codeql/plugins/: codeql_default.py
CodeQL-based-Python-source-code-scanner/codeql/plugins/QLFile/QL1/: parser.py  query.ql
WebUI/: bar.html  body.html  demo.html  demo.json  json.md  myscript.js  test.html  upload.php
basic/: main.py  project.py
codeql/: init.py  loader.py
codeql/plugins/: codeql_default.py
codeql/plugins/QLFile/QL1/: parser.py  qlpack.yml
output/: cves.json  sql.txt
pyqlitex/: __init__.py  setup.py
pyqlitex/basic/: __init__.py  exception.py  project.py
pyqlitex/codeql/: __init__.py  init.py  loader.py
pyqlitex/codeql/plugins/: codeql_default.py
tests/basic/: test_project.py
